# wsjcpp-light-web-server

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  wsjcpp.yml
highload-tests/: test_ab.sh
scripts.wsjcpp/: generate.WsjcppLightWebHttpHandler
server-tests/: run_tests.py
server-tests/liblightwebservertest/: __init__.py
src/: main.cpp  wsjcpp_light_web_deque_http_requests.cpp  wsjcpp_light_web_deque_http_requests.h  wsjcpp_light_web_http_handler_rewrite_folder.cpp  wsjcpp_light_web_http_handler_rewrite_folder.h  wsjcpp_light_web_http_handler_web_folder.cpp  wsjcpp_light_web_http_handler_web_folder.h  wsjcpp_light_web_http_request.cpp  wsjcpp_light_web_http_request.h  wsjcpp_light_web_http_response.cpp  wsjcpp_light_web_http_response.h  wsjcpp_light_web_server.cpp  wsjcpp_light_web_server.h
src.wsjcpp/: CMakeLists.txt
src/http_handlers/: http_handler_web_folder_example.cpp  http_handler_web_folder_example.h
unit-tests.wsjcpp/: CMakeLists.txt
unit-tests.wsjcpp/src/: unit_test_parse_http_request.cpp  unit_test_parse_http_request.h
web/: data.json  index.html
web/js/: app.js
